<resources>
	<string name="app_name">Cend</string>
	<string name="OkButton">Ok</string>
	<string name="ClearButton">Clear</string>
	<string name="CancelButton">Cancel</string>
	<string name="AcceptButton">Authorize</string>
	<string name="RefuseButton">Deny</string>
	<string name="JabberID">Username</string>
	<string name="Password">Password</string>
	<string name="Continue">Continue</string>
	<string name="AccountConfigureManualConfiguration">Manual Configuration</string>
	<string name="BeemServiceDescription">Use Beem Service</string>
	<string name="CDChat">Chat</string>
	<string name="CDCall">Call</string>
	<string name="CDInfos">Manage User</string>
	<string name="AddCActTitle">CendChat - Add a contact</string>
	<string name="AddCLogin">Username</string>
	<string name="AddCAlias">Alias</string>
	<string name="AddCGroup">Group</string>
	<string name="AddCOkButton">Add</string>
	<string name="AddCContactAdded">Contact added</string>
	<string name="AddCContactAddedError">Error Contact not added</string>
	<string name="AddCContactAddedLoginError">Error Login</string>
	<string name="AddCContactAlready">Contact already exist</string>
	<string name="ChangeStatusActTitle">CendChat - Change my status</string>
	<string name="ChangeStatusType">My status</string>
	<string name="ChangeStatusMessage">My status message</string>
	<string name="OpenContactList">Open contact list</string>
	<string name="ChangeStatusOk">Updating status</string>
	<string name="my_avatar">My avatar</string>
	<string name="select_avatar">Choose your avatar</string>
	<string name="take_photo">Take a photo</string>
	<string name="pick_photo">Select a picture</string>
	<string name="delete_avatar">No avatar</string>
	<string name="photoPickerNotFoundText">Photo picker not found</string>
	<string name="SettingsProxy">Proxy</string>
	<string name="SettingsProxyProxy">Use a proxy server</string>
	<string name="SettingsProxySummary">Login through a proxy server</string>
	<string name="SettingsProxyType">Protocol</string>
	<string name="SettingsProxyTypeSummary">Choose the proxy server type</string>
	<string name="SettingsProxyServer">Edit proxy server address</string>
	<string name="SettingsProxyPort">Edit proxy server port</string>
	<string name="SettingsProxyUser">Optional, allow to authenticate yourself on the proxy server</string>
	<string name="SettingsProxyPassword">Optional, allow to authenticate yourself on the proxy server</string>
	<string name="SettingsAdvanced">Advanced</string>
	<string name="SettingsAdvancedOptions">Specific server option</string>
	<string name="SettingsAdvancedRecoDelay">Modify reconnection delay</string>
	<string name="SettingsAdvancedSpecOpt">Check this box if you want to use a specific server for your connection</string>
	<string name="SettingsAdvancedAddOpt">Edit the server address</string>
	<string name="SettingsAdvancedPortOpt">Edit the server port</string>
	<string name="SettingsResourceTitle">Resource</string>
	<string name="SettingsPriorityTitle">Priority</string>
	<string name="SettingsResourceSummary">Set the XMPP resource of your client </string>
	<string name="SettingsPrioritySummary">Set the priority of your client</string>
	<string name="contact_list_preferences">Buddy list</string>
	<string name="contact_list_preferences_sum">A set of display options for your buddy list
	</string>
	<string name="CLP_hide_groups">Hide groups</string>
	<string name="CLP_hide_groups_sum">Check this option to hide groups</string>
	<string name="CLP_show_jid">Show JID</string>
	<string name="CLP_show_jid_sum">Check this option to always show Contact\'s JID</string>
	<string name="CLP_hidden_contact">Hide buddies</string>
	<string name="CLP_hidden_contact_sum">Check this option to hide unconnected buddies
	</string>
	<string name="settings_account_username">Username (JID)</string>
	<string name="settings_account_password">Password</string>
	<string name="settings_account_server">Server</string>
	<string name="settings_account_port">Port</string>
	<string name="settings_advanced_service_behaviour">Service behaviour</string>
	<string name="settings_advanced_sum">A set of options for advanced users</string>
	<string name="settings_xmpp_server">Address</string>
	<string name="comments_xmpp_server">example.com</string>
	<string name="settings_xmpp_port">Port</string>
	<string name="settings_xmpp_use_tls">Require SSL/TLS</string>
	<string name="settings_reco_delay">Reconnection delay</string>
	<string name="comments_xmpp_port">Default: 5222</string>
	<string name="settings_proxy_sum">Settings for proxy usage</string>
	<string name="settings_proxy_use">Connect using a proxy</string>
	<string name="settings_proxy_type_prompt">Choose a type of proxy</string>
	<string name="settings_proxy_server">Server</string>
	<string name="settings_proxy_port">Port</string>
	<string name="comments_proxy_port">Default: 1080</string>
	<string name="settings_proxy_username">Username</string>
	<string name="settings_proxy_password">Password</string>
	<string name="away_chk_title">Enable Auto-away</string>
	<string name="away_chk_sum">Change status to Away when the screen is turned off</string>
	<string name="away_message_title">Away message</string>
	<string name="away_message_sum">The away message that will be displayed</string>
	<string name="away_message_hint">I\'m away, my cellphone screen is off</string>
	<string name="notification_preferences">Notification settings</string>
	<string name="notification_enable_vibrate_title">Enable vibrate</string>
	<string name="notification_enable_vibrate_sum">Enable vibrate on incoming messages</string>
	<string name="notification_snd_title">Message ringtone</string>
	<string name="notification_snd_sum">Set your incoming message ringtone</string>
	<string name="settings_chat_compact">Chat compact</string>
	<string name="settings_chat_compact_sum">Set the chat windows compact</string>
	<string name="history">History</string>
	<string name="history_sum">Check this to save chats on the SDCard</string>
	<string name="chat_preferences">Chat</string>
	<string name="chat_preferences_sum">History, Layout size ...</string>
	<string name="chat_history_path">History path</string>
	<string name="chat_history_path_sum">Chat conversations are saved in a folder on the SDCard</string>
	<string name="settings_smack_debug">Enable XMPP debug</string>
	<string name="settings_full_jid_login">Use my full JID as username</string>
	<string name="settings_full_jid_login_sum">Need by some server such as Google Talk</string>
	<string name="SubscriptAccept">Subscription accepted</string>
	<string name="SubscriptError">Subscription error</string>
	<string name="SubscriptRefused">Subscription refused</string>
	<string name="SubscriptText">%s wants to add you to his/her buddy list. Do you want to authorize him/her?</string>
	<string name="SubscriptTitle">Authorize buddy?</string>
	<string name="BeemBroadcastReceiverDisconnect">CendChat: You have been disconnected</string>
	<string name="AcceptContactRequest">%s has just added you to his/her buddy list.</string>
	<string name="AcceptContactRequestFrom">Authorize %s to contact you.</string>
	<string name="edit_settings_name">CendChat - Settings</string>
	<string name="create_account_name">CendChat - Create an account</string>
	<string name="contact_list_name">Friends</string>
	<string name="user_info_name">CendChat - User Info</string>
	<string name="login_menu_settings">Settings</string>
	<string name="login_menu_about">About</string>
	<string name="login_about_title">CendChat %s - About</string>
	<string name="login_about_msg">
		Beem is an EPITECH Innovative Project. Visit us at
		http://www.beem-project.com !
	</string>
	<string name="login_about_button">Close</string>
	<string name="login_login_progress">Connecting. Please wait...</string>
	<string name="login_menu_login">Login</string>
	<string name="login_start_msg">Settings configuration in menu</string>
	<string name="loganim_connecting">Connecting ...</string>
	<string name="loganim_authenticating">Authenticating ...</string>
	<string name="loganim_login_success">Login success</string>
	<string name="loganim_login_failed">Login failed</string>
	<string name="settings_menu_create_account">Create an account</string>
	<string name="settings_menu_privacy_lists">Manage my privacy lists</string>
	<string name="settings_saved_ok">The settings have been saved successfully.</string>
	<string name="general_preferences">General preferences</string>
	<string name="user_preferences">Account (required)</string>
	<string name="user_preferences_advanced">User settings advanced (optional)</string>
	<string name="network_preferences">Network options</string>
	<string name="proxy_proxy_settings">Proxy settings</string>
	<string name="proxy_user_settings">Proxy settings</string>
	<string name="history_preferences">History</string>
	<string name="chat_layout_option">Chat layout</string>
	<string name="settings_tab_tag_account">edit_settings_tab_account</string>
	<string name="settings_tab_label_account">Account</string>
	<string name="settings_tab_tag_xmpp">edit_settings_tab_xmpp</string>
	<string name="settings_tab_label_xmpp">XMPP</string>
	<string name="settings_tab_tag_proxy">edit_settings_tab_proxy</string>
	<string name="settings_tab_label_proxy">Proxy</string>
	<string name="account_wizard_text1">CendChat</string>
	<string name="account_wizard_configure_text_1">Use an account store on the device</string>
	<string name="account_wizard_configure_text_2"><b>or</b></string>
	<string name="account_wizard_configure_text_3">Fill in the data for your existing account</string>
	<string name="account_wizard_settings_warn"><b>Warning: </b>Your settings are set to use a server proxy or a specific server hostname.</string>
	<string name="account_wizard_connection_failed"><b>Unable to authenticate your account. Please verify your credentials</b></string>
	<string name="account_wizard_select_account_btn">Choose an account</string>
		<string name="account_wizard_configure_account">I already have an account I want to use</string>
	<string name="account_wizard_create_account">I want to register for a new account</string>
	<string name="create_account_text">Enter the required informations to create your account</string>
	<string name="create_account_progress_title">Account creation</string>
	<string name="create_account_progress_message">Please wait</string>
	<string name="create_account_err_username">Bad JabberID</string>
	<string name="create_account_err_passwords">Passwords do not match.</string>
	<string name="create_account_username">Username</string>
	<string name="create_account_password">Password</string>
	<string name="create_account_confirm_password">Confirm password</string>
	<string name="create_account_err_conflict">This account is already used. Please try another one</string>
	<string name="create_account_err_connection">The selected server is not available. Please try another one</string>
	<string name="contact_list_menu_add_contact">Add a contact</string>
	<string name="contact_list_menu_status">Change status</string>
	<string name="contact_list_menu_settings">Settings</string>
	<string name="contact_list_menu_disconnect">Disconnect</string>
	<string name="contact_list_all_contact">All</string>
	<string name="contact_list_no_group">No group</string>
	<string name="userinfo_label_alias">Alias</string>
	<string name="userinfo_label_chg_group">Manage groups</string>
	<string name="userinfo_label_re_subscription">Resend invit</string>
	<string name="userinfo_label_block">Block</string>
	<string name="userinfo_label_delete">Delete</string>
	<string name="userinfo_resend">Suscription resend</string>
	<string name="userinfo_sure2delete">Are you sure you want to delete this contact?
	</string>
	<string name="userinfo_yes">Yes</string>
	<string name="userinfo_no">No</string>
	<string name="userinfo_sureresend">Are you sure you want to resend invit?</string>
	<string name="chat_name">Beem - Chat</string>
</resources>