<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:orientation="vertical" >
    <ScrollView android:layout_height="fill_parent" android:layout_width="fill_parent" 
	android:layout_weight="1">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="top"
	    android:layout_marginLeft="12dp"
	    android:layout_marginRight="12dp"
	    android:orientation="vertical" >

		<LinearLayout
		    android:id="@+id/account_layout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:visibility="gone" >

		    <TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/account_wizard_configure_text_1"
			android:textSize="18sp"
			android:gravity="center"
			android:paddingBottom="12dip" />

		    <Button
		        android:id="@+id/select_account_btn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:minWidth="100dp"
		        android:text="@string/account_wizard_select_account_btn" />

		    <TextView
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/account_wizard_configure_text_2"
			android:textSize="18sp"
			android:paddingBottom="10dip" />
		</LinearLayout>

	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingBottom="10dip"
	        android:text="Sign In"
	        android:textAllCaps="false"
	        android:textSize="36sp"
	        android:visibility="gone" />

	    <TextView
	        android:id="@+id/error_label"
	        style="@style/Label"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textMultiLine|textNoSuggestions"
	        android:text="@string/account_wizard_connection_failed"
	        android:textColor="@color/red"
	        android:visibility="invisible" />

	    <TextView
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/JabberID" style="@style/Label" />

	    <EditText
	        android:id="@+id/account_username"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="18dp"
	        android:contentDescription="@string/JabberID"
	        android:hint="user@cendhome.com"
	        android:imeOptions="actionNext"
	        android:inputType="textEmailAddress"
	        android:singleLine="true" />

	    <TextView
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/Password" style="@style/Label" />

	    <EditText
	        android:id="@+id/account_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="12dp"
	        android:contentDescription="@string/Password"
	        android:imeOptions="actionNext"
	        android:inputType="textPassword"
	        android:password="true"
	        android:singleLine="true" />

	    <TextView android:id="@+id/settings_warn_label" style="@style/Label"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/account_wizard_settings_warn"
		android:inputType="textMultiLine|textNoSuggestions"
		android:textColor="@color/white"
		android:textStyle="normal"
		android:visibility="gone" />

	    <Button
	        android:id="@+id/next"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="24dp"
	        android:enabled="false"
	        android:minWidth="100dp"
	        android:text="Sign In" />

	</LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:visibility="gone" >

	<Button
            android:id="@+id/manual_setup"
            android:text="@string/AccountConfigureManualConfiguration"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

</LinearLayout>
