<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dip"
                android:focusable="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="12dip"
                android:text="@string/account_wizard_text1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Button"
                android:text="Sign Up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dip"
                android:focusable="true"
                android:gravity="center"
                android:paddingBottom="12dip"
                android:text="Already have an account?"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/buttonSignin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Button"
                android:text="Sign In" />

            <RadioGroup
                android:id="@+id/configure_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <RadioButton
                    android:id="@+id/configure_account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_wizard_configure_account" />

                <RadioButton
                    android:id="@+id/create_account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_wizard_create_account" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_light"
        android:gravity="right|center_vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/blue"
            android:enabled="false"
            android:minWidth="100dp"
            android:text="@string/Continue"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>